added ef tools to dockerfile

--- a/webapi/Dockerfile
+++ b/webapi/Dockerfile
@@ -1,5 +1,7 @@
 # Dockerfile for .NET Web API
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+RUN dotnet tool install --global dotnet-ef
+ENV PATH="$PATH:/root/.dotnet/tools"
 WORKDIR /app
 EXPOSE 8080
 
