--- a/webapi/Dockerfile
+++ b/webapi/Dockerfile
@@ -13,6 +13,8 @@ RUN dotnet restore "./webapi.csproj"
 COPY . .
 WORKDIR "/src/"
 RUN dotnet build "webapi.csproj" -c Release -o /app/build
+RUN dotnet ef migrations add InitialCreate
+RUN dotnet ef database update
 
 FROM build AS publish
 RUN dotnet publish "webapi.csproj" -c Release -o /app/publish
