--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
       - "7294:8080" # Expose Web API on port 7294
     depends_on:
       - database
-    networks:
-      - appnetwork
+    # networks:
+    #   - appnetwork
 
   # PostgreSQL database service
   database:
@@ -28,12 +28,12 @@ services:
       - "8875:5432" # Expose Postgres on port 5432
     volumes:
       - postgres_data:/var/lib/postgresql/data # Persist database data
-    networks:
-      - appnetwork
+    # networks:
+    #   - appnetwork
 
-networks:
-  appnetwork:
-    driver: bridge
+# networks:
+#   appnetwork:
+#     driver: bridge
 
 volumes:
   postgres_data:
