--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - "8875:5432" # Expose Postgres on port 5432
     volumes:
       - postgres_data:/var/lib/postgresql/data # Persist database data
-    # networks:
-    #   - appnetwork
+    networks:
+      - appnetwork
 
   # ASP.NET Web API service
   webapi:
@@ -27,14 +27,12 @@ services:
       - "7294:8080" # Expose Web API on port 7294
     depends_on:
       - database
-    # networks:
-    #   - appnetwork
+    networks:
+      - appnetwork
 
-  # PostgreSQL database service
-
-# networks:
-#   appnetwork:
-#     driver: bridge
+networks:
+  appnetwork:
+    driver: bridge
 
 volumes:
   postgres_data:
