--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,4 @@
 services:
-  database:
-    image: postgres:17 # Use the appropriate PostgreSQL version
-    container_name: postgres_db
-    environment:
-      POSTGRES_DB: secretDB
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-    ports:
-      - "8875:5432" # Expose Postgres on port 5432
-    volumes:
-      - postgres_data:/var/lib/postgresql/data # Persist database data
-    networks:
-      - appnetwork
-
   # ASP.NET Web API service
   webapi:
     image: mcr.microsoft.com/dotnet/aspnet:8.0 # Use the appropriate .NET version
@@ -21,19 +7,7 @@ services:
       context: ./webapi # This should point to your Web API project folder
       dockerfile: Dockerfile # Make sure there's a Dockerfile in this folder
     environment:
-      - ASPNETCORE_ENVIRONMENT=Production
-      - ConnectionStrings__DefaultConnection=Host=database;Port=8875;Database=secretDB;Username=postgres;Password=postgres
+      - ConnectionStrings__DefaultConnection=${ConnectionStrings__DefaultConnection}
     ports:
       - "7294:8080" # Expose Web API on port 7294
-    depends_on:
-      - database
-    networks:
-      - appnetwork
 
-networks:
-  appnetwork:
-    driver: bridge
-
-volumes:
-  postgres_data:
-    driver: local
